anneal/tests/fixtures/allow_sorry_fallbacks/expected.stderr
  ⚠ unused variable: `cond`
    ╭─[[PROJECT_ROOT]/src/lib.rs:67:36]
 66 │ /// ```
 67 │ pub unsafe fn expects_precondition(cond: bool) {}
    ·                                    ──┬─
    ·                                      ╰── 
 68 │ 
    ╰────
  help: if this is intentional, prefix it with an underscore

  ⚠ declaration uses `sorry`
    ╭─[[PROJECT_ROOT]/src/lib.rs:22:8]
 21 │ /// ```
 22 │ pub fn missing_user_bound() -> bool {
    ·        ──┬─
    ·          ╰── here
 23 │     true
    ╰────

  ⚠ declaration uses `sorry`
    ╭─[[PROJECT_ROOT]/src/lib.rs:29:8]
 28 │ /// ```
 29 │ pub fn unprovable_is_valid() -> InvalidStruct {
    ·        ──┬─
    ·          ╰── here
 30 │     InvalidStruct { x: 1, y: 2 }
    ╰────

  × Type mismatch
  │   true
  │ has type
  │   Bool
  │ but is expected to have type
  │   InvalidStruct
    ╭─[[PROJECT_ROOT]/src/lib.rs:42:14]
 41 │ /// ensures:
 42 │ ///   ret == true
    ·              ──┬─
    ·                ╰── here
 43 │ /// proof:
    ╰────

[External Error] generated/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c.lean: Function expected at
  Post
but this term has type
  ?m.1

Note: Expected a function because this term is being applied to the argument
  ret_

Hint: The identifier `Post` is unknown, and Lean's `autoImplicit` option causes an unknown identifier to be treated as an implicitly bound variable with an unknown type. However, the unknown type cannot be a function, and a function is what Lean expects here. This is often the result of a typo or a missing `import` or `open` statement.
  × Tactic `rfl` failed: The left-hand side
  │   true == false
  │ is not definitionally equal to the right-hand side
  │   true
  │ 
  │ ret : Unit
  │ h_returns : explicit_semantic_failure = ok ret
  │ ⊢ (true == false) = true
    ╭─[[PROJECT_ROOT]/src/lib.rs:58:7]
 57 │ /// proof (h):
 58 │ ///   rfl
    ·       ─┬─
    ·        ╰── here
 59 │ /// ```
    ╰────

Error: Lean verification failed. Consider running `cargo anneal generate`, iterating on generated `.lean` files, and copying results back to `.rs` files.
